discussion/kv_engine/156557/156557_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Add mcbp_fuzz_test

mcbp_fuzz_test is a small test program which use libFuzzer
(https://llvm.org/docs/LibFuzzer.html) to test the package
validation code.

The program is not built by default, and you need to explicitly
add -DBUILD_MCBP_FUZZ_TEST=ON when invoking CMake (Note: you
should also be using clang and have libfuzzer available. This
is not checked by CMake in this patch)

Once built it may be run with:

    ./mcbp_fuzz_test -max_len=32

(There isn't much value of larger values as the packet header
is the first 32 bytes).

A natural extension would be:

1. Open a socket, auth and select bucket and then send the packet
   over the wire (it would also validate the execution on the
   server which should be running with asan)

2. Change the fuzz-method so that we only fuzz _part_ of the
   header. Some of our commands require JSON payload, and the
   odds of the fuzzer generating JSON is relatively low. (There
   may be other fuzzers which does a better job at this. We don't
   need to fuzz-test random values for opaque for instance),

Change-Id: I74da642ce6f9623feb4598549418285e3ac5f12e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-29 07:17:06.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-29 07:21:09.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37392/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37392/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31891/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31891/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11861/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11861/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10942/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10942/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12012/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19904/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19904/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12344/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12344/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10291/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10: error: "subdoc/operations.h" file not found [clang-diagnostic-error]
#include <subdoc/operations.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10291/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10:
error: "subdoc/operations.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10291/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8893/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/protocol/mcbp/mcbp_fuzz_test.cc b/protocol/mcbp/mcbp_fuzz_test.cc
index 481574218..c97be2a58 100644
--- a/protocol/mcbp/mcbp_fuzz_test.cc
+++ b/protocol/mcbp/mcbp_fuzz_test.cc
@@ -6,7 +6,7 @@
  *   in that file, in accordance with the Business Source License, use of this
  *   software will be governed by the Apache License, Version 2.0, included in
  *   the file licenses/APL2.txt.
-*/
+ */
 #include &lt;daemon/connection.h&gt;
 #include &lt;daemon/cookie.h&gt;
 #include &lt;daemon/front_end_thread.h&gt;
@@ -63,7 +63,7 @@ public:
      * @param data The random generated data to test
      * @param size The size of the generated data
      */
-    void fuzz(const uint8_t * data, size_t size) {
+    void fuzz(const uint8_t* data, size_t size) {
         const auto* header = reinterpret_cast&lt;const cb::mcbp::Header*&gt;(data);
         if (size &lt; sizeof(*header) || !header-&gt;isValid() ||
             (size &lt; (sizeof(*header) + header-&gt;getBodylen())) ||
@@ -76,7 +76,7 @@ public:
             //   * The entire packet available (header + body)
             //   * It is a request (we don&#39;t check responses)
             //   * It is a client command (we don&#39;t check server commands)
-            return ;
+            return;
         }
 
         Cookie cookie(connection);

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8893/ )
----------------------------------------------------------------------------------------------------------------------
